--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,41 @@
+.container {
+	padding-left: 60px
+	padding-right:60px;
+}
 
+
+nav {
+	background-color: grey;
+	position: fixed;
+	width: 100%;
+	height: 60px;
+}
+
+nav .icon-img {
+  height: 50px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 50%;
+  border: 1px solid black;
+
+}
+
+nav ul {
+	display: inline-block;
+	list-style: none;
+
+}
+
+nav li {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+nav li::after {
+  content: "|";
+  margin-left: 5px;
+}
+
+nav a:hover {
+	color: black;
+}
