--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,15 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.left {
+	float: left;
+	height: 350px;
+	width: 350px;
+}
+
+.right {
+	float: right;
+	height: 350px;
+	width: 350px;
+}
